# liquid-dsp-swig

./: .gitignore  CMakeLists.txt  configure.bat  readme.md
include/: liquid.swig.h  liquidbindings.h  liquidbindings.hpp  liquidextras.h
src/: liquidbindings.c  liquidbindings.cpp  liquidextras.c
src/modules/: modem.i
swig/: libliquid.i  liquidtypemaps.i  numpy.i
swig/liquidbindings/: liquidbindings.i
swig/liquidextras/: liquidextras.i
swig/modules/: equalization.i  firfilt.i  firinterp.i  modem.i  symsinc.i
swig/typemaps/: liquid.i  liquid_arrays.i  liquid_arrays_inplace.i  liquid_hacks.i  liquid_singles.i  liquidtypemaps.i
tests/: demod_testwave.py  equalizer_example.py  symsync_crcf_example.py  test_modulate_bulk.py  test_recover_wave.py  test_symsync.py  testwave.npy
